Internal change
PiperOrigin-RevId: 932907160